feat: Complete Spark/Airflow pipeline with DQ + Performance optimizations
✨ Features:
- Full ETL pipeline: Raw → Silver → Gold
- Data Quality assertions with quarantine system
- Airflow orchestration with parallel execution
- Mock data generator (Pandas-based for speed)
- Gold layer: dimensions, facts, features, dashboards

🐛 Fixes:
- Fixed silver_gastos column references
- Updated paths for .parquet files
- Removed non-existent column processing

⚡ Performance:
- Spark shuffle partitions: 200 → 8
- Kryo serialization enabled
- Limited to local[2] cores
- Adaptive query execution enabled
- Max 4 concurrent tasks (memory management)

📊 Current State:
- Extract: ~5 seconds (Pandas)
- Silver+Gold: ~27 minutes (Spark overhead on small datasets)
- All 23 tasks passing ✅

🎯 Known Issues:
- Performance on local Docker not optimal for small datasets
- Designed for cloud deployment (Dataproc/Composer)
- BigQuery integration pending

Seeking external review for performance optimization strategies.

--- a/.gitignore
+++ b/.gitignore
@@ -18,18 +18,18 @@ webserver_config.py
 standalone_admin_password.txt
 logs/
 plugins/
+airflow-webserver.pid
 
-# Datos (NUNCA SUBIR ESTO)
-data/
-raw/
-silver/
-gold/
-quarantine/
+# Datos (NUNCA SUBIR ESTO) - Especificamos la carpeta /data/
+data/raw/
+data/silver/
+data/gold/
+data/quarantine/
 
-# Docker
+# Referencias y otros
+references/
 .docker/
 
 # OS
 .DS_Store
 Thumbs.db
-references/
