--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -52,4 +52,5 @@ services:
       - AIRFLOW__DATABASE__SQL_ALCHEMY_CONN=postgresql+psycopg2://airflow:airflow@postgres/airflow
       - AIRFLOW__CORE__LOAD_EXAMPLES=False
       - AIRFLOW__WEBSERVER__SECRET_KEY=spdp_secret_key
+      - AIRFLOW__WEBSERVER__WORKERS=2 # Reducido para local (default: 4)
     command: webserver
