perf: Optimize Airflow for local execution
Changes:
- Reduced webserver workers to 1 (prevent OOM)
- Increased timeouts to 300s (allow DAG loading)
- Fixed dashboard_gastos syntax error
- Added manual pipeline script for debugging
- Optimized DAG max_active_tasks=4

All 19 jobs validated and working ✅

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -52,5 +52,7 @@ services:
       - AIRFLOW__DATABASE__SQL_ALCHEMY_CONN=postgresql+psycopg2://airflow:airflow@postgres/airflow
       - AIRFLOW__CORE__LOAD_EXAMPLES=False
       - AIRFLOW__WEBSERVER__SECRET_KEY=spdp_secret_key
-      - AIRFLOW__WEBSERVER__WORKERS=2 # Reducido para local (default: 4)
+      - AIRFLOW__WEBSERVER__WORKERS=1 # Reducido a 1 para evitar OOM
+      - AIRFLOW__WEBSERVER__WEB_SERVER_WORKER_TIMEOUT=300 # 5 min timeout
+      - AIRFLOW__CORE__DAGBAG_IMPORT_TIMEOUT=300 # 5 min para cargar DAGs
     command: webserver
