feat: Implement cloud watermarking logic, flexible schema handling, and incremental batch extraction fixes

--- a/.env.example
+++ b/.env.example
@@ -1,43 +1,36 @@
 # ============================================
-# CREDENCIALES - Supabase (reutilizado del CRM)
+# CONFIGURACIÓN DE SEGURIDAD - AIRFLOW
 # ============================================
-SUPABASE_URL=https://tu-proyecto.supabase.co
-SUPABASE_KEY=tu-api-key-aqui
+# IMPORTANTE: Este archivo NO debe ser commiteado a Git
+# Copiar como .env y llenar con valores reales
 
-# ============================================
-# SPARK - Configuración Local
-# ============================================
-SPARK_MASTER=local[*]
-SPARK_DRIVER_MEMORY=2g
-SPARK_EXECUTOR_MEMORY=2g
+# --- SUPABASE (CRM Source) ---
+SUPABASE_URL=https://your-project.supabase.co
+SUPABASE_KEY=your-anon-key-here
 
-# ============================================
-# PATHS - Rutas de Datos
-# ============================================
-DATA_RAW_PATH=data/raw
-DATA_PROCESSED_PATH=data/processed
-DATA_OUTPUT_PATH=data/output
+# --- GOOGLE CLOUD PLATFORM ---
+# Ruta al archivo de credenciales de servicio (JSON)
+GOOGLE_APPLICATION_CREDENTIALS=/opt/airflow/config/gcp-service-account.json
+GCP_PROJECT_ID=your-gcp-project-id
+GCS_BUCKET=your-gcs-bucket-name
 
-# ============================================
-# AIRFLOW - Configuración (Opcional)
-# ============================================
-AIRFLOW_HOME=./airflow
-AIRFLOW__CORE__DAGS_FOLDER=./dags
-AIRFLOW__CORE__LOAD_EXAMPLES=False
+# --- AIRFLOW ---
+AIRFLOW_UID=50000
+AIRFLOW_GID=0
 
-# ============================================
-# CLOUD - Configuración para Producción
-# ============================================
-# AWS
-# AWS_ACCESS_KEY_ID=
-# AWS_SECRET_ACCESS_KEY=
-# AWS_REGION=us-east-1
-# S3_BUCKET=
+# Fernet key para encriptar secretos en Airflow
+# Generar con: python -c "from cryptography.fernet import Fernet; print(Fernet.generate_key().decode())"
+AIRFLOW__CORE__FERNET_KEY=your-fernet-key-here
 
-# GCP
-# GOOGLE_APPLICATION_CREDENTIALS=path/to/service-account.json
-# GCS_BUCKET=
+# Clave secreta para Flask
+# Generar con: python -c "import secrets; print(secrets.token_hex(32))"
+AIRFLOW__WEBSERVER__SECRET_KEY=your-secret-key-here
 
-# Azure
-# AZURE_STORAGE_CONNECTION_STRING=
-# AZURE_CONTAINER=
+# --- AIRFLOW DATABASE ---
+AIRFLOW__DATABASE__SQL_ALCHEMY_CONN=postgresql+psycopg2://airflow:airflow@postgres/airflow
+
+# --- AIRFLOW EXECUTOR ---
+AIRFLOW__CORE__EXECUTOR=LocalExecutor
+
+# --- ENVIRONMENT ---
+ENV=cloud
