--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,21 @@ __pycache__/
 venv/
 venv_airflow/
 .env
+.env.local
+.env.production
+
+# Credenciales y Secretos (CRÍTICO - NUNCA SUBIR)
+*.json
+!package.json
+!tsconfig.json
+*.key
+*.pem
+*.p12
+*.pfx
+config/gcp-service-account.json
+config/*.json
+credentials/
+secrets/
 
 # Spark/Hadoop
 spark-warehouse/
@@ -19,12 +34,18 @@ standalone_admin_password.txt
 logs/
 plugins/
 airflow-webserver.pid
+airflow-webserver.err
+airflow-webserver.out
+airflow-webserver.log
+airflow-webserver-monitor.pid
 
 # Datos (NUNCA SUBIR ESTO) - Especificamos la carpeta /data/
 data/raw/
 data/silver/
 data/gold/
 data/quarantine/
+data/lake/
+watermarks.json
 
 # Referencias y otros
 references/
@@ -33,3 +54,4 @@ references/
 # OS
 .DS_Store
 Thumbs.db
+
